test/conformance/accept/header_and_title_order.hdoc
hdoc(version="2.0", lang="en");

title { Proper Order }

p "Body content"
