test/conformance/reject/duplicate_header.hdoc
hdoc(version="2.0", lang="en");

hdoc(version="2.0", lang="en");

p "Duplicate headers"
